test_programs/analisys/uninit_if.tip
// CMD: --run-pases=uninit_vars

main() {
    var a,b;

    a = 10;

    if (a == 11) {
       b = 10;
    }

    return b; // expected-error{{Use of unitialized variable Indentifier(b)}}
}
